# arjancodes-hotel_db_v3

./: .pylintrc  README.md  add_sample_bookings.sh  hotel.db  hotel2.db  main.py  pyproject.toml  test_booking.py  test_rooms.py
doc/: sample_curl_commands.sh
hotel/db/: create_db.py  db_interface.py  engine.py  models.py  sample_data.py
hotel/operations/: bookings.py  customers.py  interface.py  models.py  rooms.py
hotel/routers/: bookings.py  customers.py  rooms.py
